[DOCKER] - Added missing dependencies

--- a/intel-oneapi-based/python3/Dockerfile
+++ b/intel-oneapi-based/python3/Dockerfile
@@ -15,11 +15,16 @@ RUN true \
             unzip \
             zip \
             curl \
+            diffutils \
             openssl \
             libgfortran \
             libgomp \
+            openssl-devel \
+            bzip2-devel \
+            sqlite-devel \
             zlib-devel \
             expat-devel \
+            readline-devel \
     &&  dnf clean all \
     &&  rm -rf \
         /{tmp,var/tmp}/* \
